# AudioAppTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeVars.h.in  CMakeVars.h.txt  README.md
JuceModules/: CMakeLists.txt
Source/: App.cpp
Source/App/: MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
Source/Common/: CMakeVars.h  Config.h
source/Common/: cmakeVar.h
source/app/: App.cpp  MainComponent.h  MainWindow.h
source/common/: appConfig.h  cmakeVar.h
template/: cmakeVar.h.tpl
